# essfile

./: LICENSE  Makefile  README.md  pyproject.toml
src/essfile/: __init__.py  cli.py  em.py  essfile.py  essread.py
src/essfile/extract/: __init__.py  hapticvis.py
